# ledger-jester

./: .gitignore  README.md  flake.nix  pyproject.toml
src/ledger_jester/: __init__.py  __main__.py  cli.py  converter.py  ledger_wrapper.py  ledgerwrap.py  revolut.py  sync.py
src/ledger_jester/banks/: revolut.py
src/ledger_jester/converters/: __init__.py  amazonvisa.py  cepteteb.py  comdirect.py  enpara.py  enpara_kk.py  paypal.py  revolut.py  vwbank.py  wallet.py
src/ledger_wrapper/: __init__.py
src/parsers/: __init__.py  __main__.py  amazonvisa.py  cepteteb.py  cli.py  comdirect.py  enpara.py  parse-paypal.py  parse-revolut.py  parser.py  paypal.py  registry.py  revolut.py  vwbank.py
src/parsers/banks/: __init__.py  amazonvisa.py  revolut.py
src/registry/: __init__.py
src/sync/: __init__.py  cli.py  converter.py
src/sync/banks/: __init__.py  amazonvisa.py  revolut.py  wallet.py
tests/: test_amazonvisa_converter.py  test_amazonvisa_parser.py  test_ledger_wrapper.py  test_revolut.py  test_revolut_converter.py  test_revolut_parser.py
tests/fixtures/: revolut_sample.csv
util/: parse-amazonvisa.py  parse-enpara.py  parse-paypal.py  parse-revolut.py  xls-to-csv.sh
