[project]
name = "ledger-jester"
authors = [{ name = "octvs", email = "octvs@posteo.de" }]
version = "0.0.0"
dependencies = ["ledger"]
description = "A stripped down fork of ledger-autosync."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
parsers = ["pandas"]
test = ["pytest"]

[project.scripts]
ledger-j = "ledger_jester.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
